replay game fix

--- a/TicTacToe.html
+++ b/TicTacToe.html
@@ -30,9 +30,9 @@
 	<div id="block9" class="block" style="top: 400px;left: 400px;" onclick="markthebox(this)"></div>
 	</div>
 </div>
-<div style="display:none;" id="iwin"><div style="height:680px;width:100%;background-color:rgb(62, 250, 84);"><h1 style="color:rgb(233, 38, 233);position:absolute;top:200px;left:450px;font-size:100px;font-family:Courier">I Win<br><input id="resetgame" type="button" value="Play Again!"></h1></div></div>
-<div style="display:none;" id="uwin"><div style="height:680px;width:100%;background-color:rgb(62, 250, 84);"><h1 style="color:rgb(233, 38, 233);position:absolute;top:200px;left:450px;font-size:100px;font-family:Courier">You Win<br><input id="resetgame" type="button" value="Play Again!"></h1></div></div>
-<div style="display:none;" id="draw"><div style="height:680px;width:100%;background-color:rgb(62, 250, 84);"><h1 style="color:rgb(233, 38, 233);position:absolute;top:200px;left:450px;font-size:100px;font-family:Courier">Match Draw!<br><input id="resetgame" type="button" value="Play Again!"></h1></div></div>
+<div style="display:none;" id="iwin"><div style="height:680px;width:100%;background-color:rgb(62, 250, 84);"><h1 style="color:rgb(233, 38, 233);position:absolute;top:200px;left:450px;font-size:100px;font-family:Courier">I Win<br><input onclick="resetgame()" type="button" value="Play Again!"></h1></div></div>
+<div style="display:none;" id="uwin"><div style="height:680px;width:100%;background-color:rgb(62, 250, 84);"><h1 style="color:rgb(233, 38, 233);position:absolute;top:200px;left:450px;font-size:100px;font-family:Courier">You Win<br><input onclick="resetgame()" type="button" value="Play Again!"></h1></div></div>
+<div style="display:none;" id="draw"><div style="height:680px;width:100%;background-color:rgb(62, 250, 84);"><h1 style="color:rgb(233, 38, 233);position:absolute;top:200px;left:450px;font-size:100px;font-family:Courier">Match Draw!<br><input onclick="resetgame()" type="button" value="Play Again!"></h1></div></div>
 <script type="text/javascript" src="TicTacToe.js"></script>
 </body>
 </html>
